[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-multimail"
version = "0.1.0"
description = "LangChain tools for MultiMail — give your LangChain agents email capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "David Hanke", email = "david@multimail.dev" }]
keywords = ["langchain", "email", "ai", "agents", "multimail", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "multimail>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "langchain>=0.2.0"]

[project.urls]
Homepage = "https://multimail.dev"
Documentation = "https://multimail.dev/docs"
Repository = "https://github.com/multimail-dev/langchain-multimail"
